// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssociatedCompanyJobsComponent handleRemoveAssociate triggers removeAssociation output 1`] = `
<pf-peer-job-association-associated-jobs
  companyJobs={[Function Array]}
  removeAssociation={[Function EventEmitter]}
>
  <div
    class="job-association-associated-jobs container px-0"
    id="job-association-associated-jobs"
  >
    <h4>
      Associated Jobs
    </h4>
    
    
  </div>
</pf-peer-job-association-associated-jobs>
`;

exports[`AssociatedCompanyJobsComponent should display company jobs 1`] = `
<pf-peer-job-association-associated-jobs
  companyJobs={[Function Array]}
  removeAssociation={[Function EventEmitter]}
>
  <div
    class="job-association-associated-jobs container px-0"
    id="job-association-associated-jobs"
  >
    <h4>
      Associated Jobs
    </h4>
    
    <div>
      <div
        class="row p-0 m-0"
      >
        <div
          class="col-xs-1 col-sm-1 col-md-1 col-lg-1 col-xl-1 px-0 mx-0"
        />
        <div
          class="col-xs-10 col-sm-9 col-md-9 col-lg-8 col-xl-5 px-0 mx-0"
        >
          <strong
            class="px-0 mx-0"
          >
            Title
          </strong>
        </div>
        <div
          class="col-xs-1 col-sm-2 col-md-2 col-lg-3 col-xl-6 px-0 mx-0"
        >
          <strong
            class="px-0 mx-0"
          >
            Code
          </strong>
        </div>
      </div>
      
      <div
        class="row p-0 m-0"
      >
        <div
          class="col-xs-1 col-sm-1 col-md-1 col-lg-1 col-xl-1 px-0 mx-0"
        >
          <button
            class="remove-association-button"
            title="Remove"
          >
            <i
              class="fas fa-times"
            />
          </button>
        </div>
        <div
          class="col-xs-10 col-sm-9 col-md-9 col-lg-8 col-xl-5 px-0 mx-0"
        >
          Job Title
        </div>
        <div
          class="col-xs-1 col-sm-2 col-md-2 col-lg-3 col-xl-6 px-0 mx-0"
        >
          001
        </div>
      </div>
    </div>
    
  </div>
</pf-peer-job-association-associated-jobs>
`;
